--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
       </header>
 
       <section class="main-screen ibg" id="main-screen">
-         <picture>
-            <source data-srcset="img/section-top__bg-img.webp" srcset="img/section-top__bg-img.webp" type="image/webp">
-            <img data-src="img/section-top__bg-img.jpg" src="img/section-top__bg-img.jpg" alt="" class="lazy"></picture>
+
+
+         <img data-src="img/section-top__bg-img.jpg" src="img/section-top__bg-img.jpg" alt="" class="lazy">
          <div class="container main-screen__container">
             <div class="main-screen__text">
                <div class="main-screen__title_yellow">от итальянского повара</div>
