--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="initial-scale=1.0, user-scalable=no, maximum-scale=1" />
-   <link rel="stylesheet" href="css/style.min.css" disabled>
+   <link rel="stylesheet" href="css/style.min.css">
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Roboto:wght@300&display=swap"
       rel="stylesheet">
    <title>PizzaTime</title>
