--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
 
       </header>
 
-      <section class="main-screen ibg" id="main-screen">
-
-
-         <img data-src="img/section-top__bg-img.jpg" src="img/section-top__bg-img.jpg" alt="" class="lazy">
+      <section class="main-screen lazy" id="main-screen" data-bg="img/section-top__bg-img.webp">
+         <!-- <img data-src="img/section-top__bg-img.jpg" src="img/section-top__bg-img.jpg" alt="" class="lazy"> -->
          <div class="container main-screen__container">
             <div class="main-screen__text">
                <div class="main-screen__title_yellow">от итальянского повара</div>
