--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="initial-scale=1.0, user-scalable=no, maximum-scale=1" />
-   <link rel="stylesheet" href="css/style.min.css">
    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Roboto:wght@300&display=swap"
       rel="stylesheet">
+   <link rel="stylesheet" href="css/style.min.css">
    <title>PizzaTime</title>
    </script>
 </head>
@@ -365,7 +365,7 @@
                            <i class="fab fa-facebook-f"></i>
                         </a>
                         <a href="#" class="contact__social-link">
-                           <i class="fab fa-instagram"></i>
+                           <i class="fab fa-linkedin"></i>
                         </a>
                      </div>
                   </div>
@@ -438,7 +438,7 @@
    </div>
 
    <script src="https://cdn.jsdelivr.net/npm/vanilla-lazyload@17.0.1/dist/lazyload.min.js"></script>
-   <script src="js/script.min.js"></script>
+   <script defer src="js/script.min.js"></script>
 </body>
 
 </html>
